--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,10 @@ body > input[type="radio"] {
   background-color: transparent;
 }
 
+.dropdown-active .dropdown-link {
+  background-color: #d07058;
+}
+
 .navigation-list > li:hover .dropdown-list {
   z-index: 1;
   display: block;
@@ -293,9 +297,15 @@ body > input[type="radio"] {
   color: #ffffff;
   font-weight: 500;
   text-decoration: none;
-  border-radius: 15px;
+  border-radius: 100px;
   background-color: #a1b4a9;
   transition: 0.2s;
+}
+
+.icon-basket-active {
+  padding: 10px 0;
+  padding-left: 32px;
+  padding-right: 20px;
 }
 
 .icon-login {
@@ -304,8 +314,8 @@ body > input[type="radio"] {
 
 .svg-icon-login {
   position: absolute;
-  left: 21px;
-  top: 10px;
+  left: 17px;
+  top: 11px;
 }
 
 .svg-icon-login path {
@@ -327,8 +337,8 @@ body > input[type="radio"] {
 .icon-basket::before {
   content: "";
   position: absolute;
-  left: 6px;
-  top: 11px;
+  left: 0px;
+  top: 10px;
   width: 21px;
   height: 20px;
   background-image: url("../img/basket.svg");
@@ -347,8 +357,8 @@ body > input[type="radio"] {
 .icon-basket-active:before {
   content: "";
   position: absolute;
-  left: 16px;
-  top: 8px;
+  left: 6px;
+  top: 10px;
   width: 21px;
   height: 20px;
   background-image: url("../img/basket-red.svg");
@@ -423,6 +433,7 @@ body > input[type="radio"] {
   color: #000000;
   background-color: #f8f7f4;
   border-radius: 5px;
+  box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
 }
 
 .table-text-right {
@@ -575,13 +586,12 @@ body > input[type="radio"] {
   font-weight: bold;
 }
 
-.products {
-  margin-bottom: -47px;
+.products-height {
+  margin-bottom: 56px;
 }
 
 .products-item {
   position: relative;
-  min-height: 410px;
   padding: 9px 13px;
   text-align: center;
   transition: 0.2s;
@@ -598,6 +608,25 @@ body > input[type="radio"] {
   background-repeat: no-repeat;
 }
 
+.products-item::after {
+  content: "";
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
+  display: none;
+  min-height: 405px;
+  left: -13px;
+  position: absolute;
+  top: 9px;
+  width: 293px;
+  opacity: 0.5;
+  z-index: 2;
+}
+
+.products-item:hover::after {
+  display: block;
+}
+
 .catalog .products-item::before {
   content: "";
   background: none;
@@ -605,8 +634,8 @@ body > input[type="radio"] {
 
 .price-products {
   margin: 0;
-  margin-top: -63px;
-  margin-left: -113px;
+  margin-top: -57px;
+  margin-left: -102px;
   padding: 0;
   font-size: 30px;
   line-height: 35px;
@@ -652,13 +681,8 @@ body > input[type="radio"] {
   width: 220px;
   display: none;
   position: absolute;
-  left: 23px;
-  bottom: 20px;
-}
-
-.products-item:hover {
-  border-radius: 5px;
-  box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
+  left: 31px;
+  bottom: -20px;
 }
 
 .products-item:hover .fest-view {
@@ -804,7 +828,7 @@ body > input[type="radio"] {
   width: 301px;
   top: 61px;
   right: 10px;
-  padding: 25px 20px;
+  padding: 26px 20px;
   color: #000000;
   background: #ffffff;
   border-radius: 15px;
@@ -835,7 +859,12 @@ body > input[type="radio"] {
 }
 
 .main-footer {
+
   padding: 23px 25px;
+}
+
+.main-footer-margin {
+  margin-top: 28px;
 }
 
 .social {
@@ -996,7 +1025,6 @@ body > input[type="radio"] {
 
 .filter-item {
   margin-top: -15px;
-  margin-bottom: 15px;
 }
 
 .filter-form {
@@ -1006,16 +1034,50 @@ body > input[type="radio"] {
 .filter-title {
   display: block;
   margin-bottom: 6px;
-  padding: 0 15px;
+  padding: 0 23px;
   font-size: 14px;
   line-height: 16px;
   font-weight: 500;
 }
 
 .filter-shadow {
-  padding: 12px 15px;
+  padding: 10px 15px;
   background-color: #aabab0;
   border-radius: 100px;
+}
+
+.filter-range {
+  padding: 9px 0;
+}
+
+.filter-range {
+  position: relative;
+  top: -9px;
+  border-bottom: 4px solid #e8ebe7;
+}
+
+.filter-range-btn {
+  width: 22px;
+  height: 20px;
+  background-image: url("../img/filter-button.svg");
+  background-repeat: no-repeat;
+}
+.filter-range-right {
+  position: absolute;
+  top: 8px;
+  right: 45px;
+  width: 22px;
+  height: 20px;
+}
+
+.filter-range-left {
+  position: absolute;
+  top: 9px;
+  left: 19px;
+}
+
+.filter-item-width {
+  min-width: 213px;
 }
 
 .filter-shadow .custom-radio,
@@ -1055,7 +1117,7 @@ body > input[type="radio"] {
 .filter-checkbox-text .custom-checkbox + .indicator-checkbox {
   position: absolute;
   top: 0;
-  left: 1px;
+  left: 7px;
   width: 24px;
   height: 20px;
   border: 2px solid #ffffff;
@@ -1092,13 +1154,26 @@ body > input[type="radio"] {
   background-color: #ffffff;
 }
 
+.filter-radio-width {
+  width: 415px;
+}
+
 .filter-radio-text,
 .filter-checkbox-text{
   padding-left: 33px;
-  padding-right: 16px;
+  padding-right: 14px;
   font-size: 16px;
   line-height: 18px;
   color: #ffffff;
+}
+
+.filter-checkbox-text {
+  padding-right: 17px;
+}
+
+.filter-radio-text,
+.filter-checkbox-text:last-child {
+  margin-right: 0;
 }
 
 .filter-radio-text {
@@ -1110,7 +1185,7 @@ body > input[type="radio"] {
   display: inline-block;
   vertical-align: top;
   margin-top: 11px;
-  padding: 10px 20px;
+  padding: 7px 22px;
   color: #ffffff;
   background-color: #a6b7ae;
   border: 2px solid #ffffff;
@@ -1133,6 +1208,8 @@ body > input[type="radio"] {
 
 .paginator-list {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -1167,8 +1244,8 @@ body > input[type="radio"] {
 .prev::before {
   content: "";
   position: absolute;
-  top: 6px;
-  left: 217px;
+  top: 7px;
+  left: 184px;
   width: 8px;
   height: 12px;
   background-image: url("../img/icon-right-small.svg");
@@ -1178,13 +1255,16 @@ body > input[type="radio"] {
 .next::before {
   content: "";
   position: absolute;
-  right: 219px;
+  right: 184px;
   top: 8px;
   width: 8px;
   height: 12px;
   background-image: url("../img/icon-right-small.svg");
   background-repeat: no-repeat;
   transform: rotate(-181deg);
+}
+.pagination-left {
+  margin-left: auto;
 }
 
 .paginator-link:hover {
@@ -1228,6 +1308,10 @@ body > input[type="radio"] {
 .user-row li {
   padding: 0 5px;
   margin-top: -11px;
+}
+
+.user-left-row {
+  margin: 0 -22px;
 }
 
 .user-left {
@@ -1323,7 +1407,7 @@ body > input[type="radio"] {
 }
 
 .filter-row {
-  width: 76%;
+  width: 75%;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
@@ -1332,7 +1416,15 @@ body > input[type="radio"] {
 
 .filter-row li {
   padding: 0;
-  margin-bottom: 15px;
+  margin-bottom: 21px;
+}
+
+.pagination-row {
+  margin: 0 -6px;
+}
+
+.pagination-row li {
+  padding: 0 1px;
 }
 
 
